Develop Start Checkpoint

--- a/main.html
+++ b/main.html
@@ -11,14 +11,13 @@
   <body>
     <header>
       <h1>
-        <a href="/">RICO NOTES</a>
+        <a href="/">Tatt Game Library</a>
       </h1>
       <nav class="pc-nav">
         <ul>
-          <li><a href="#">ABOUT</a></li>
-          <li><a href="#">SERVICE</a></li>
-          <li><a href="#">COMPANY</a></li>
-          <li><a href="#">CONTACT</a></li>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">PLAY</a></li>
+          <li><a href="#">HISTORY</a></li>
         </ul>
       </nav>
     </header>
