reset.cssを別のものに変更, 画面の縦3分割を調査中

--- a/main.html
+++ b/main.html
@@ -21,5 +21,7 @@
         </ul>
       </nav>
     </header>
+    <div class="GamePreview">ここがゲーム選択画面のブロック</div>
+    <div class="GmaeDiscription">ここが選択中ゲームの説明テキストブロック</div>
   </body>
 </html>
